--- a/src/home.html
+++ b/src/home.html
@@ -52,7 +52,7 @@
                 <div class="title-deco-line"></div>
             </div>
 
-            <!-- 瑞士网格布局列表 -->
+            <!-- 网格布局列表 -->
             <div class="swiss-grid">
                 <div class="grid-col">
                     <div class="col-header"><span>Intro</span><span class="col-idx">01</span></div>
@@ -64,7 +64,7 @@
                         <span>DUR: 120M</span><span>TYPE: GEN/ADM</span><span class="meta-label">STATUS: CONFIRMED</span>
                     </div>
                 </div>
-                <!-- 列表数据也可以由 JS 生成，但为了 SEO 保留在 HTML 中也是对的 -->
+                <!-- 列表数据也可以由 JS 生成，但此处选择为了 SEO 保留在 HTML 中 -->
                 <div class="grid-col right-align">
                     <div class="col-header"><span class="col-idx">02</span><span>Nov</span></div>
                     <ul class="col-body">
